--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   top: 0;
   left: 0;
   height: 100vh;
-  background-color: #f4f4f4;
+  background-color: greenyellow;
   padding: 10px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
